# esp32-modular

./: .cproject  .project  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
ASW/ble/: ble_app.c  ble_app.h  ble_app_gap.c  ble_app_gap.h  ble_app_gatt.c  ble_app_gatt.h
ASW/gpio/: gpio_app.c  gpio_app.h
ASW/mqtt/: mqtt_app.c  mqtt_app.h
ASW/nvs/: nvs_app.c  nvs_app.h
ASW/wifi/: wifi_app.c  wifi_app.h
main/: CMakeLists.txt  main.c  main.h
